update system fix t.treshure and others